--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<a>Option 3</a>
 	</div>
 </div>
-<script src="./js/InputDLL.js"></script>
+<script src="https://raw.githubusercontent.com/himstar/input-dropdown-menu-plugin/gh-pages/js/inputDLL.js"></script>
 <script type="text/javascript">
 	new InputDLL('id1');
 </script>
